Change images extension without transparent to jpg. Added favicon to all pages. Added classes for empty tags

--- a/src/components/UI-kit/colorBlock/colorBlock.pug
+++ b/src/components/UI-kit/colorBlock/colorBlock.pug
@@ -1,6 +1,6 @@
 mixin colorBlock({color, title, hash})
   li.colorBlock__item
     div(class=`colorBlock__colors colorBlock__${color}`)
-    div
+    .colorBlock__right-block
       h2.colorBlock__title= title
       span.colorBlock__hash= hash
