--- a/src/components/booking/booking.pug
+++ b/src/components/booking/booking.pug
@@ -17,13 +17,13 @@ mixin booking({id = 'bookingId'})
         .booking__price 39 960₽
       .booking__item
         .booking__priceToDays 
-          span Сбор за услуги: скидка 2 179₽
+          span.booking__price-item Сбор за услуги: скидка 2 179₽
           .booking__priceInfo
             .booking__priceSymbol i
         .booking__price 0₽
       .booking__item
         .booking__priceToDays
-          span Сбор за дополнительные услуги
+          span.booking__price-item Сбор за дополнительные услуги
           .booking__priceInfo
             .booking__priceSymbol i
         .booking__price 300₽
