--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -9,38 +9,38 @@ mixin footer({id = "uniqIdFooter", type = "full"})
             img.footer__logo(src=require("../../images/Logo.png"), alt="Логотип")
             span.footer__span.footer__description Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
           .footer__second
-            h3 Навигация
+            h3.footer__header Навигация
             ul.footer__list 
               li.footer__item
-                a(href="#") О нас
+                a.footer__link(href="#") О нас
               li.footer__item
-                a(href="#") Новости
+                a.footer__link(href="#") Новости
               li.footer__item
-                a(href="#") Служба поддержки
+                a.footer__link(href="#") Служба поддержки
               li.footer__item
-                a(href="#") Услуги
+                a.footer__link(href="#") Услуги
           .footer__third
-            h3 О нас
+            h3.footer__header О нас
             ul.footer__list 
               li.footer__item
-                a(href="#") О сервисе
+                a.footer__link(href="#") О сервисе
               li.footer__item
-                a(href="#") Наша команда
+                a.footer__link(href="#") Наша команда
               li.footer__item
-                a(href="#") Вакансии
+                a.footer__link(href="#") Вакансии
               li.footer__item
-                a(href="#") Инвесторы
+                a.footer__link(href="#") Инвесторы
           .footer__forth 
-            h3 Служба поддержки
+            h3.footer__header Служба поддержки
             ul.footer__list 
               li.footer__item
-                a(href="#") Соглашения
+                a.footer__link(href="#") Соглашения
               li.footer__item
-                a(href="#") Сообшества
+                a.footer__link(href="#") Сообшества
               li.footer__item
-                a(href="#") Связь с нами
+                a.footer__link(href="#") Связь с нами
           .footer__fith 
-            h3 Подписка
+            h3.footer__header Подписка
             span.footer__span Получайте специальные предложения и новости сервиса
             +textField({uniqId: id, title: '', description: '', placeholder: 'Email', arrow: true, small: true})
         .footer__middleBlock 
