--- a/src/components/textField/textField.pug
+++ b/src/components/textField/textField.pug
@@ -10,7 +10,7 @@ mixin textField(props)
         placeholder=placeholder,
         value=value,
         readonly=readonly,
-        date-masked=mask ? "masked" : "simple",
+        data-masked=mask ? "masked" : "simple",
         data-dropdown-input=id,
         id=uniqId
       )
