--- a/src/pages/landingPage/landingPage.scss
+++ b/src/pages/landingPage/landingPage.scss
@@ -4,7 +4,7 @@
   position: relative;
   width: 1534px;
   min-height: 830px;
-  background-image: url('../../images/image\ 3.png');
+  background-image: url('../../images/image\ 3.jpg');
   background-repeat: no-repeat;
   background-position: 0 100%;
   padding-top: 68px;
