--- a/src/pages/registrationPage/registrationPage.scss
+++ b/src/pages/registrationPage/registrationPage.scss
@@ -1,7 +1,7 @@
 .registrationPage {
   width: 1534px;
   min-height: 684px;
-  background-image: url('../../images/image\ 4.png');
+  background-image: url('../../images/image\ 4.jpg');
   background-repeat: no-repeat;
   background-position: 0% 100%;
   display: flex;
