--- a/src/components/comment/comment.pug
+++ b/src/components/comment/comment.pug
@@ -3,8 +3,8 @@ include ../likeButton/likeButton.pug
 mixin comment({id = 'UniqIdComment', title = 'Мурад Сарафанов', date = '5', text = 'Лучший матрас', photo = '#', likes = 0, liked = false })
   .comment
     .comment__top 
-      .comment__photo
-        img(src=require(`../../images/${photo}`), alt=title)
+      .comment__photo-wrapper
+        img.comment__photo(src=require(`../../images/${photo}`), alt=title)
       .comment__header
         .comment__title= title
         .comment__date= `${date} назад`
