--- a/src/components/comment/comment.scss
+++ b/src/components/comment/comment.scss
@@ -9,14 +9,14 @@
     margin-bottom: 8px;
   }
 
-  &__photo {
+  &__photo-wrapper {
     width: 48px;
     height: 48px;
     margin-right: 9px;
     transform: translate(-23px, -13px);
+  }
 
-    & img {
-    }
+  &__photo {
   }
 
   &__header {
