--- a/src/components/findRooms/findRooms.scss
+++ b/src/components/findRooms/findRooms.scss
@@ -20,12 +20,13 @@
     padding: 24px 0px 30px;
   }
 
+  &__header-wrapper {
+  }
+
   &__header {
-    & h1 {
-      font-weight: 700;
-      font-size: 24px;
-      line-height: 29px;
-    }
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
   }
 
   &__dateDropdown {
