--- a/src/layouts/UI/UI.pug
+++ b/src/layouts/UI/UI.pug
@@ -6,6 +6,14 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    link(rel="apple-touch-icon", sizes="152x152", href="assets/favicon/apple-touch-icon.png")
+    link(rel="icon", type="image/ico", href="assets/favicon/favicon.ico")
+    link(rel="icon", type="image/png", sizes="32x32", href="assets/favicon/favicon-32x32.png")
+    link(rel="icon", type="image/png", sizes="16x16", href="assets/favicon/favicon-16x16.png")
+    link(rel="manifest", href="assets/favicon/site.webmanifest")
+    link(rel="mask-icon", href="assets/favicon/safari-pinned-tab.svg", color="#5bbad5")
+    meta(name="msapplication-TileColor", content="#da532c")
+    meta(name="theme-color", content="#ffffff")
     block header
 
   body
