--- a/src/pages/formElements/formElements.pug
+++ b/src/pages/formElements/formElements.pug
@@ -25,7 +25,7 @@ block header
 block content
   section.formElements
     .formElements__firstColumn
-      .formElents__firstBlock
+      .formElements__firstBlock
         .formElements__text-field
           +textField({uniqId: 'textField1', title: 'Text field', description: 'default', placeholder: 'Email'})
         .formElements__text-field
@@ -57,26 +57,26 @@ block content
     .formElements__secondColumn
       .formElements__firstBlock
         .formElements__checkbox-button
-          h3 Checkbox Buttons
+          h3.formElements__header Checkbox Buttons
           +checkbox({id: 'checkbox1', title: 'Можно курить'})
           +checkbox({id: 'checkbox2', title: 'Можно с питомцами'})
           +checkbox({id: 'checkbox3', title: 'Можно пригласить гостей (до 10 человек)'})
         .formElements__radio-button
-          h3 Radio Buttons
+          h3.formElements__header Radio Buttons
           .formElements__radio-button-box
             +radioButton({id: 'radioButton1', title:'Мужчина', name: 'checkboxed', checked: true})
             +radioButton({id: 'radioButton2', title: 'Женщина', name: 'checkboxed'})
         .formElements__toggle
-          h3 Toggle
+          h3.formElements__header Toggle
           +toggle({id: 'toggle1', text: 'Получать спецпредложения', cheked: true})
           +toggle({id: 'toggle2', text: 'Получать спецпредложения'})
         .formElements__like-button
-          h3 like button
+          h3.formElements__header like button
           .formElements__like-button-box
             +likeButton({number: 2, clicked: false})
             +likeButton({number: 12, clicked: true})
         .formElements__rate-button
-          h3 rate button
+          h3.formElements__header rate button
             .formElements__rate-button-box
               +rateButton({id: 'rateButton1', size: 3})
               +rateButton({id: 'rateButton2', size: 4})
@@ -85,7 +85,7 @@ block content
           +dropdown({uniqId: 'dropdown4', title: 'dropdown', description: 'expanded', text: 'Сколько гостей', open: true})
       .formElements__thirdBlock
         .formElements__checkboxes
-          h3 rich Checkbox Buttons
+          h3.formElements__header rich Checkbox Buttons
           +checkbox({id: 'SuperIDcheckbox33', title: 'Широкий коридор', rich: true, richText: 'Ширина коридоров в номере не менее 91 см.'})
           +checkbox({id: 'SuperIDcheckbox344', title: 'Помощник для инвалидов', rich: true, richText: 'На 1 этаже вас встретит специалист и проводит до номера.'})
         .formElements__comment
@@ -93,9 +93,9 @@ block content
     .formElements__thirdColumn
       .formElements__firstBlock
         .formElements__range-slider
-          h3 range slider
+          h3.formElements__header range slider
         .formElements__buttons
-          h3 buttons
+          h3.formElements__header buttons
           .formElements__topButtons
             +button({title: 'click me'})
             +button({title: 'click me'})
@@ -108,12 +108,12 @@ block content
           //- +button({title: 'Перейти к оплате', type: 'big'})
           +button({title: 'Перейти к оплате', type: 'big', arrow: true})
         .formElements__pagination
-          h3 pagination
+          h3.formElements__header pagination
           +pagination({})
       .formElements__secondBlock
         .formElements__dropdown
           +dropdown({uniqId: 'dropdown5', title: 'dropdown', description: 'expanded', text: 'Сколько гостей', open: true})
       .formElements__thirdBlock
         .formElements__bullet-list
-          h3 Bullet list
+          h3.formElements__header Bullet list
           +bulletList({title: 'bullet list', list: ['Нельзя с питомцами', 'Без вечеринок и мероприятий', 'Время прибытия — после 13:00, а выезд до 12:00']})
