Added section, footer, main, header tags

--- a/src/layouts/UI/UI.pug
+++ b/src/layouts/UI/UI.pug
@@ -17,6 +17,6 @@ html(lang="en")
     block header
 
   body
-    .UILayout__wrapper
+    main.UILayout__wrapper
       img.UILayout__logo(src=require("../../images/LogoUI.png"), alt="logo")
       block content
