--- a/src/pages/colorsAndType/colorsAndType.pug
+++ b/src/pages/colorsAndType/colorsAndType.pug
@@ -8,7 +8,7 @@ block header
   meta(name="keywords", content="colors and type")
 
 block content
-  .pageColors__content
+  section.pageColors__content
     .pageColors__leftBlock
       - const colors = [{color: 'dark100', title: 'Dark Shade 100%', hash: '#1F2041'},{color: 'dark75', title: 'Dark Shade 75%', hash: '#1F2041'},{color: 'dark50', title: 'Dark Shade 50%', hash: '#1F2041'},{color: 'dark25', title: 'Dark Shade 25%', hash: '#1F2041'},{color: 'dark5', title: 'Dark Shade 5%', hash: '#1F2041'},{color: 'purple', title: 'Purple', hash: '#BC9CFF'},{color: 'green', title: 'Green', hash: '#6FCF97'}];
       ul.pageColors__list
