--- a/src/pages/startPage/startPage.pug
+++ b/src/pages/startPage/startPage.pug
@@ -9,7 +9,7 @@ html(lang="en")
     meta(name="keywords", content="Start page")
   body
     .start-page
-      .start-page__links 
+      section.start-page__links 
         - const UILinks = ["colorsAndType", "formElements", "headersAndFooters", "cards"];
         ul.start-page__list
           each link in UILinks
