--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -13,7 +13,7 @@ block header
   meta(name="keywords", content="cards")
 
 block content
-  .cards 
+  section.cards 
     .cards__firstColumn
       .cards__findRooms
         +findRooms({id: 'cardsFindRooms1'})
