Fixed for bestPratice rules: renamed function, remove comments code, move export to the end of document, added fonts

--- a/src/components/UI-kit/colorFonts/colorFonts.scss
+++ b/src/components/UI-kit/colorFonts/colorFonts.scss
@@ -7,7 +7,7 @@
 }
 
 .colorFonts__tagFonts {
-  font-family: Montserrat;
+  font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   margin-right: 30px;
@@ -47,7 +47,7 @@
 
 .colorFonts__textFonts {
   display: block;
-  font-family: Montserrat;
+  font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 700;
 }
