--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -48,14 +48,14 @@ mixin footer({id = "uniqIdFooter", type = "full"})
         .footer__botBlock
           span.footer__copyright Copyright © 2018 Toxin отель. Все права защищены.
           .footer__socialButtons
-            span.icon &#xf099;
-            span.icon &#xf082;
-            span.icon &#xf16d;
+            span.footer__icon &#xf099;
+            span.footer__icon &#xf082;
+            span.footer__icon &#xf16d;
     else
       .footer__small 
         img.footer__logo(src=require("../../images/Logo.png"), alt="Логотип")
         span.footer__copyright Copyright © 2018 Toxin отель. Все права защищены.
         .footer__socialButtons
-          span.icon &#xf099;
-          span.icon &#xf082;
-          span.icon &#xf16d;
+          span.footer__icon &#xf099;
+          span.footer__icon &#xf082;
+          span.footer__icon &#xf16d;
