--- a/src/components/expandableCheckboxList/expandableCheckboxList.scss
+++ b/src/components/expandableCheckboxList/expandableCheckboxList.scss
@@ -41,7 +41,7 @@
     transition: max-height 0.2s ease-out;
 
     &--open {
-      display: block !important;
+      display: block;
     }
   }
 }
