--- a/src/components/filterDateDropdown/filterDateDropdown.scss
+++ b/src/components/filterDateDropdown/filterDateDropdown.scss
@@ -25,7 +25,7 @@
 
   &__dateOpen {
     display: block;
-    position: absolute;
-    z-index: 2;
+    position: relative;
+    z-index: 22;
   }
 }
