--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -13,12 +13,6 @@
   @media (max-width: 980px) {
     padding: 0 5px;
   }
-  &__logo {
-    margin-right: 287px;
-    @media (max-width: 1250px) {
-      margin-right: 10px;
-    }
-  }
 
   &__menu {
     height: 70px;
@@ -27,23 +21,11 @@
     justify-content: space-between;
   }
 
-  &__dropdown-menu {
-    display: none;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 100%;
-    background: #fff;
-    padding: 0;
-    box-shadow: 0 10px 20px rgb(31 32 65 / 5%);
-    z-index: 20;
-  }
-
-  &__dropdown-menu--active {
-    display: flex;
-    @media (min-width: 992px) {
-      display: none;
+  &__logo {
+    margin-right: 287px;
+    cursor: pointer;
+    @media (max-width: 1250px) {
+      margin-right: 10px;
     }
   }
 
@@ -60,15 +42,6 @@
     }
   }
 
-  &__burger {
-    background-color: transparent;
-    border: 0;
-  }
-
-  &__icon {
-    color: #bc9cff;
-  }
-
   &__list {
     display: flex;
     align-items: center;
@@ -83,6 +56,7 @@
     align-items: center;
     list-style-type: none;
     margin-right: 20px;
+    cursor: pointer;
   }
 
   &__text {
@@ -109,5 +83,34 @@
   &__user {
     padding-left: 20px;
     border-left: 1px solid rgb(31 32 65 / 10%);
+  }
+
+  &__dropdown-menu {
+    display: none;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    background: #fff;
+    padding: 0;
+    box-shadow: 0 10px 20px rgb(31 32 65 / 5%);
+    z-index: 20;
+  }
+
+  &__dropdown-menu--active {
+    display: flex;
+    @media (min-width: 992px) {
+      display: none;
+    }
+  }
+
+  &__burger {
+    background-color: transparent;
+    border: 0;
+  }
+
+  &__icon {
+    color: #bc9cff;
   }
 }
