--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,21 +1,43 @@
 @font-face {
   font-family: Montserrat;
-  src: url("../fonts/Montserrat-Regular.ttf") format("truetype");
+  src: url('../fonts/Montserrat-Regular.woff2') format('truetype');
   font-weight: 400;
 }
 
 @font-face {
   font-family: Montserrat;
-  src: url("../fonts/Montserrat-Bold.ttf") format("truetype");
+  src: url('../fonts/Montserrat-Bold.woff2') format('truetype');
   font-weight: 700;
 }
 
 @font-face {
-  font-family: "Material Icons";
+  font-family: Montserrat;
+  src: url('../fonts/Montserrat-Regular.woff') format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url('../fonts/Montserrat-Bold.woff') format('truetype');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url('../fonts/Montserrat-Regular.ttf') format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url('../fonts/Montserrat-Bold.ttf') format('truetype');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src:
-    local("Material Icons"),
-    local("MaterialIcons-Regular"),
-    url("../fonts/MaterialIcons-Regular.ttf") format("ttf");
+  src: local('Material Icons'), local('MaterialIcons-Regular'),
+    url('../fonts/MaterialIcons-Regular.ttf') format('ttf');
 }
