--- a/src/components/findRooms/findRooms.pug
+++ b/src/components/findRooms/findRooms.pug
@@ -3,7 +3,7 @@ include ../dropdown/dropdown.pug
 include ../button/button.pug
 
 mixin findRooms({id = ''})
-  .findRooms
+  .findRooms.js-findRooms
     form.findRooms__form
       .findRooms__header-wrapper
         h1.findRooms__header Найдём номера под ваши пожелания
