--- a/src/components/login/login.pug
+++ b/src/components/login/login.pug
@@ -2,7 +2,7 @@ include ../textField/textField.pug
 include ../button/button.pug
 
 mixin login({id = 'loginId'})
-  .login
+  form.login
     .login__header-wrapper 
       h1.login__header Войти
     .login__email 
