--- a/src/components/rateButton/rateButton.pug
+++ b/src/components/rateButton/rateButton.pug
@@ -1,4 +1,4 @@
 mixin rateButton({id = 'uniqIdRateButton', size = 0})
-  .rateButton(id=id, data-rateButtonStars=size)
+  .rateButton.js-rateButton(id=id, data-rateButtonStars=size)
     each item, indx in [1, 2, 3, 4, 5]
-      .material-icons.rateButton__icon(data-rateButton=`${id}-${indx}`)= "star_border"
+      .material-icons.rateButton__icon.js-rateButton__icon(data-rateButton=`${id}-${indx}`)= "star_border"
