--- a/src/components/registration/registration.pug
+++ b/src/components/registration/registration.pug
@@ -3,7 +3,7 @@ include ../radioButton/radioButton.pug
 include ../toggle/toggle.pug
 
 mixin registration({id = '', textButton = 'Перейти к оплате'})
-  .registration
+  form.registration
     .registration__header-wrapper 
       h1.registration__header Регистрация аккаунта
     .registration__name
