--- a/src/layouts/UI/UI.pug
+++ b/src/layouts/UI/UI.pug
@@ -5,7 +5,7 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet")
     link(rel="apple-touch-icon", sizes="152x152", href="assets/favicon/apple-touch-icon.png")
     link(rel="icon", type="image/ico", href="assets/favicon/favicon.ico")
     link(rel="icon", type="image/png", sizes="32x32", href="assets/favicon/favicon-32x32.png")
