--- a/src/pages/searchRoom/searchRoom.pug
+++ b/src/pages/searchRoom/searchRoom.pug
@@ -37,24 +37,25 @@ block content
       .searchRoom__filter-menu 
         +expandableCheckboxList({id: 'expandableCheckbox2', title: 'дополнительные удобства'})
     .searchRoom__sidebar
-      .searchRoom__dateDropdown 
-        +filterDateDropdown({uniqId: 'searchRoom__filterDateDropdown1', title: 'даты пребывания в отеле'})
-      .searchRoom__guestDropdown
-        +dropdown({uniqId: 'searchRoom__dropdown1', title: 'гости', description: '', small: true, text: 'Сколько гостей'})
-      .searchRoom__ratePriceSlider
-      .searchRoom__rules
-        h3.searchRoom__sidebar-header правила дома
-        +checkbox({id: 'checkbox1', title: 'Можно курить'})
-        +checkbox({id: 'checkbox2', title: 'Можно с питомцами'})
-        +checkbox({id: 'checkbox3', title: 'Можно пригласить гостей (до 10 человек)'})
-      .searchRoom__availability
-        h3.searchRoom__sidebar-header доступность
-        +checkbox({id: 'SuperIDcheckbox33', title: 'Широкий коридор', rich: true, richText: 'Ширина коридоров в номере не менее 91 см.'})
-        +checkbox({id: 'SuperIDcheckbox344', title: 'Помощник для инвалидов', rich: true, richText: 'На 1 этаже вас встретит специалист и проводит до номера.'})
-      .searchRoom__convenienceDropdown
-        +dropdown({uniqId: 'dropdown2', type: 'furniture', title: 'Удобствa номера', small: true, description: '', text: '2 спальни, 2 кровати...'})
-      .searchRoom__convenienceList
-        +expandableCheckboxList({id: 'expandableCheckbox1', title: 'дополнительные удобства'})
+      form.searchRoom__form.js-searchRoom__form
+        .searchRoom__date-dropdown 
+          +filterDateDropdown({uniqId: 'searchRoom__filterDateDropdown1', title: 'даты пребывания в отеле'})
+        .searchRoom__guestDropdown
+          +dropdown({uniqId: 'searchRoom__dropdown1', title: 'гости', description: '', small: true, text: 'Сколько гостей'})
+        .searchRoom__ratePriceSlider
+        .searchRoom__rules
+          h3.searchRoom__sidebar-header правила дома
+          +checkbox({id: 'checkbox1', title: 'Можно курить'})
+          +checkbox({id: 'checkbox2', title: 'Можно с питомцами'})
+          +checkbox({id: 'checkbox3', title: 'Можно пригласить гостей (до 10 человек)'})
+        .searchRoom__availability
+          h3.searchRoom__sidebar-header доступность
+          +checkbox({id: 'SuperIDcheckbox33', title: 'Широкий коридор', rich: true, richText: 'Ширина коридоров в номере не менее 91 см.'})
+          +checkbox({id: 'SuperIDcheckbox344', title: 'Помощник для инвалидов', rich: true, richText: 'На 1 этаже вас встретит специалист и проводит до номера.'})
+        .searchRoom__convenienceDropdown
+          +dropdown({uniqId: 'dropdown2', type: 'furniture', title: 'Удобствa номера', small: true, description: '', text: '2 спальни, 2 кровати...'})
+        .searchRoom__convenienceList
+          +expandableCheckboxList({id: 'expandableCheckbox1', title: 'дополнительные удобства'})
     .searchRoom__mainContent
       h1.searchRoom__header Номера, которые мы для вас подобрали
       .searchRoom__hotelList 
