--- a/src/components/radioButton/radioButton.scss
+++ b/src/components/radioButton/radioButton.scss
@@ -10,7 +10,7 @@
     z-index: -1;
     opacity: 0;
 
-    &:checked + label {
+    &:checked + .radioButton__label {
       color: global.$dark75;
 
       &::before {
