--- a/src/pages/formElements/formElements.scss
+++ b/src/pages/formElements/formElements.scss
@@ -105,7 +105,7 @@
     & .formElements__bullet-list {
       padding-top: 2px;
 
-      & h3 {
+      & .formElements__header {
         margin-top: 5px;
       }
     }
@@ -114,7 +114,7 @@
   &__checkbox-button {
     width: 245px;
 
-    & h3 {
+    & .formElements__header {
       margin: 4px 0 11px;
     }
   }
@@ -122,7 +122,7 @@
   &__radio-button {
     margin-top: 39px;
 
-    & h3 {
+    & .formElements__header {
       margin: 4px 0 9px;
     }
 
@@ -139,7 +139,7 @@
   &__toggle {
     margin-top: 38px;
 
-    & h3 {
+    & .formElements__header {
       margin: 4px 0 15px;
     }
 
@@ -151,7 +151,7 @@
   &__like-button {
     margin-top: 40px;
 
-    & h3 {
+    & .formElements__header {
       margin: 4px 0 15px;
     }
 
@@ -167,7 +167,7 @@
   &__rate-button {
     margin-top: 41px;
 
-    & h3 {
+    & .formElements__header {
       margin: 4px 0 15px;
     }
 
@@ -182,7 +182,7 @@
   }
 
   &__checkboxes {
-    & h3 {
+    & .formElements__header {
       margin: 4px 0 10px;
     }
   }
@@ -193,7 +193,7 @@
   }
 
   &__range-slider {
-    & h3 {
+    & .formElements__header {
       margin: 4px 0 10px;
     }
   }
@@ -201,7 +201,7 @@
   &__buttons {
     margin-top: 73px;
 
-    & h3 {
+    & .formElements__header {
       margin: 4px 0 10px;
     }
 
@@ -237,7 +237,7 @@
   &__pagination {
     margin-top: 40px;
 
-    & h3 {
+    & .formElements__header {
       margin: 4px 0 16px;
     }
   }
